2002-05-02  Andreas J. Guelzow <aguelzow@taliesin.ca>

	* dialog-printer-setup.c (get_paper_pswidth) : use gnome-print-master
	(get_paper_psheight) : ditto
	(canvas_update) : use print-config
	(notebook_flipped) : new
	(orientation_changed) : deleted
	(paper_size_changed) : deleted
	(do_setup_page) : use gnome-print paper selector
	(do_fetch_page) : use gnome-print-master
	* print.glade : use gnome-print paper selector rather than combo box

2002-05-02  Andreas J. Guelzow <aguelzow@taliesin.ca>

	* dialog-preferences.c (pref_tree_set_model) : check for missing schemas

2002-05-01  Christophe Merlet  <christophe@merlet.net>

	* Makefile.am : Added dialogs-graph-guru.c in $EXTRA_DIST

2002-04-29  Jody Goldberg <jody@gnome.org>

	* Release 1.1.3

2002-04-25  Andreas J. Guelzow <aguelzow@taliesin.ca>

	* dialog-preferences.c : add sort preference page
	* src/dialogs/dialog-cell-sort.c : add preserve-formats
	  checkbox
	* src/dialogs/cell-sort.glade : ditto

2002-04-17  Andreas J. Guelzow <aguelzow@taliesin.ca>

	* dialog-printer-setup.c (do_setup_page_info) : make page-order
	  icons non-expandable (Bug #76474)

2002-04-17  Andreas J. Guelzow <aguelzow@taliesin.ca>

	* dialog-preferences.c : add more items to file/xml 
	  preference page

2002-04-17  Andreas J. Guelzow <aguelzow@taliesin.ca>

	* dialog-preferences.c : add file/xml preference page
	(dialog_pref_create_int_spin) : new
	(dialog_pref_create_float_spin) : new
	(dialog_pref_create_checkbox) : new

2002-04-16  Andreas J. Guelzow <aguelzow@taliesin.ca>

	* dialog-preferences.c : add window-size preference page

2002-04-15  Andreas J. Guelzow <aguelzow@taliesin.ca>

	* dialog-preferences.c : add window-size preference to 
	  catch-all page

2002-04-15  Andreas J. Guelzow <aguelzow@taliesin.ca>

	* dialog-function-select.c : use get/set methods of gnumeric-gconf.h
	* dialog-plugin-manager.c : switch from gnome-config to gconf
	* dialog-preferences.c : add include
